<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>org.zenoss.zep</groupId>
    <artifactId>zep-parent</artifactId>
    <packaging>pom</packaging>
    <version>2.8.1-SNAPSHOT</version>
    <name>Zenoss Event Processor Parent</name>
    <url>http://www.zenoss.com</url>

    <modules>
        <module>core</module>
        <module>webapp</module>
        <module>dist</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <!-- This database is used for integration tests (dropped/added each time). -->
        <zep.test.jdbc.dbname>zenoss_zep_test</zep.test.jdbc.dbname>
        <zep.test.index.dir>${project.build.directory}/index</zep.test.index.dir>
        <zep.test.amqp.uri>amqp://zenoss:zenoss@localhost:5672/zenoss-test</zep.test.amqp.uri>

        <!--
        Changing the Lucene version here could negatively affect customers using 4.x -> 5.x migrations.
        That migration path copies the index from a 4.x system to a 5.x system.
        Please make sure you do NOT make a backwards-incompatible change here without serious consideration.
        -->
        <version.lucene>4.7.2</version.lucene>

        <!--
        Last version compiled for Java 6. Client *is* compatible with later servers.
        -->
        <version.solrj>4.7.2</version.solrj>

        <version.jackson>2.15.2</version.jackson>
        <version.jetty>9.4.52.v20230823</version.jetty>
        <version.logback>1.4.1</version.logback>
        <version.metrics>4.2.19</version.metrics>
        <version.mysql>5.1.15</version.mysql>
        <version.postgresql>9.0-801.jdbc4</version.postgresql>
        <version.resteasy>4.7.9.Final</version.resteasy>
        <version.slf4j>2.0.1</version.slf4j>
        <version.spring>5.3.30</version.spring>
        <version.tomcat-jdbc>7.0.27</version.tomcat-jdbc>
        <guava.version>32.1.2-jre</guava.version>

        <metric-consumer.version>0.1.14</metric-consumer.version>

        <!-- chosen based upon the version used in zing-proto -->
        <protobuf.version>3.24.2</protobuf.version>

        <gax-grpc.version>2.24.0</gax-grpc.version>
        <pubsub.version>1.115.2</pubsub.version>
        <pubsublite.version>1.12.3</pubsublite.version>
        <zenoss-protocols.version>2.1.9-SNAPSHOT</zenoss-protocols.version>
        <zenoss-utils.version>2.1.1-SNAPSHOT</zenoss-utils.version>
        <zing-proto.version>11.1.2</zing-proto.version>
    </properties>

    <profiles>
        <!-- Disable the integration tests if we haven't specified a database type -->
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>!dbtype</name>
                </property>
            </activation>
            <properties>
                <skipITs>true</skipITs>
            </properties>
        </profile>
        <profile>
            <id>mysql</id>
            <activation>
                <property>
                    <name>dbtype</name>
                    <value>mysql</value>
                </property>
            </activation>
            <properties>
                <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
                <zep.jdbc.hostname>127.0.0.1</zep.jdbc.hostname>
                <zep.jdbc.port>3306</zep.jdbc.port>
                <zep.jdbc.admin.username>root</zep.jdbc.admin.username>
                <zep.jdbc.admin.password>root</zep.jdbc.admin.password>
                <zep.jdbc.username>zenoss</zep.jdbc.username>
                <zep.jdbc.password>zenoss</zep.jdbc.password>
            </properties>
        </profile>
        <profile>
            <id>postgresql</id>
            <activation>
                <property>
                    <name>dbtype</name>
                    <value>postgresql</value>
                </property>
            </activation>
            <properties>
                <zep.jdbc.protocol>${dbtype}</zep.jdbc.protocol>
                <zep.jdbc.hostname>127.0.0.1</zep.jdbc.hostname>
                <zep.jdbc.port>5432</zep.jdbc.port>
                <zep.jdbc.admin.username>postgres</zep.jdbc.admin.username>
                <zep.jdbc.admin.password>postgres</zep.jdbc.admin.password>
                <zep.jdbc.username>zenoss</zep.jdbc.username>
                <zep.jdbc.password>zenoss</zep.jdbc.password>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <version>3.0</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>3.0.5</version>
                    <configuration>
                        <xmlOutput>true</xmlOutput>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                <compilerArgs>
                  <arg>-Xlint:all</arg>
                </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <detectJavaApiLink>true</detectJavaApiLink>
                    <excludePackageNames>*.impl.*,*.rest.*</excludePackageNames>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
